@@ -1,0 +1,369 @@
+<?xml version="1.0"?>
+
+<!DOCTYPE MODE SYSTEM "xmode.dtd">
+
+<MODE>
+	<PROPS>
+		<PROPERTY NAME="commentStart" VALUE="/*" />
+		<PROPERTY NAME="commentEnd" VALUE="*/" />
+		<PROPERTY NAME="lineComment" VALUE="--" />
+		<PROPERTY NAME="noWordSep" VALUE="_" />
+	</PROPS>
+	<RULES IGNORE_CASE="TRUE" HIGHLIGHT_DIGITS="TRUE">
+		<WHITESPACE> </WHITESPACE>
+		<WHITESPACE>	</WHITESPACE>
+		<SPAN TYPE="COMMENT1">
+			<BEGIN>/*</BEGIN>
+			<END>*/</END>
+		</SPAN>
+		<SPAN TYPE="LITERAL1">
+			<BEGIN>'</BEGIN>
+			<END>'</END>
+		</SPAN>
+		<SPAN TYPE="LITERAL1" NO_LINE_BREAK="TRUE">
+			<BEGIN>[</BEGIN>
+			<END>]</END>
+		</SPAN>
+		<EOL_SPAN TYPE="COMMENT1">--</EOL_SPAN>
+		<SEQ TYPE="OPERATOR">+</SEQ>
+		<SEQ TYPE="OPERATOR">-</SEQ>
+		<SEQ TYPE="OPERATOR">/</SEQ>
+		<SEQ TYPE="OPERATOR">*</SEQ>
+		<SEQ TYPE="OPERATOR">=</SEQ>
+		<SEQ TYPE="OPERATOR">&gt;</SEQ>
+		<SEQ TYPE="OPERATOR">&lt;</SEQ>
+		<SEQ TYPE="OPERATOR">%</SEQ>
+		<SEQ TYPE="OPERATOR">&amp;</SEQ>
+		<SEQ TYPE="OPERATOR">|</SEQ>
+		<SEQ TYPE="OPERATOR">^</SEQ>
+		<SEQ TYPE="OPERATOR">~</SEQ>
+		<SEQ TYPE="OPERATOR">!=</SEQ>
+		<SEQ TYPE="OPERATOR">!&gt;</SEQ>
+		<SEQ TYPE="OPERATOR">!&lt;</SEQ>
+		<MARK_PREVIOUS TYPE="LABEL" AT_LINE_START="TRUE">:</MARK_PREVIOUS>
+		<SEQ TYPE="NULL">:</SEQ>
+		<SEQ TYPE="NULL">.</SEQ>
+		<SEQ TYPE="NULL">,</SEQ>
+		<SEQ TYPE="NULL">;</SEQ>
+		<SEQ TYPE="NULL">)</SEQ>
+		<SEQ TYPE="NULL">(</SEQ>
+
+		<KEYWORDS IGNORE_CASE="TRUE">
+			<!-- reserved words -->
+			<KEYWORD1>ABORT</KEYWORD1>
+			<KEYWORD1>ACCESS</KEYWORD1>
+			<KEYWORD1>ADD</KEYWORD1>
+			<KEYWORD1>ALTER</KEYWORD1>
+			<KEYWORD1>ARRAY</KEYWORD1>
+			<KEYWORD1>ARRAY_LEN</KEYWORD1>
+			<KEYWORD1>AS</KEYWORD1>
+			<KEYWORD1>ASC</KEYWORD1>
+			<KEYWORD1>ASSERT</KEYWORD1>
+			<KEYWORD1>ASSIGN</KEYWORD1>
+			<KEYWORD1>AT</KEYWORD1>
+			<KEYWORD1>AUDIT</KEYWORD1>
+			<KEYWORD1>AUTHORIZATION</KEYWORD1>
+			<KEYWORD1>AVG</KEYWORD1>
+			<KEYWORD1>BASE_TABLE</KEYWORD1>
+			<KEYWORD1>BEGIN</KEYWORD1>
+			<KEYWORD1>BINARY_INTEGER</KEYWORD1>
+			<KEYWORD1>BODY</KEYWORD1>
+			<KEYWORD1>CASE</KEYWORD1>
+			<KEYWORD1>CHAR</KEYWORD1>
+			<KEYWORD1>CHAR_BASE</KEYWORD1>
+			<KEYWORD1>CHECK</KEYWORD1>
+			<KEYWORD1>CLOSE</KEYWORD1>
+			<KEYWORD1>CLUSTER</KEYWORD1>
+			<KEYWORD1>CLUSTERS</KEYWORD1>
+			<KEYWORD1>COLAUTH</KEYWORD1>
+			<KEYWORD1>COLUMN</KEYWORD1>
+			<KEYWORD1>COMMENT</KEYWORD1>
+			<KEYWORD1>COMMIT</KEYWORD1>
+			<KEYWORD1>COMPRESS</KEYWORD1>
+			<KEYWORD1>CONSTANT</KEYWORD1>
+			<KEYWORD1>CONSTRAINT</KEYWORD1>
+			<KEYWORD1>CREATE</KEYWORD1>
+			<KEYWORD1>CURRENT</KEYWORD1>
+			<KEYWORD1>CURRVAL</KEYWORD1>
+			<KEYWORD1>CURSOR</KEYWORD1>
+			<KEYWORD1>DATABASE</KEYWORD1>
+			<KEYWORD1>DATA_BASE</KEYWORD1>
+			<KEYWORD1>DATE</KEYWORD1>
+			<KEYWORD1>DBA</KEYWORD1>
+			<KEYWORD1>DEBUGOFF</KEYWORD1>
+			<KEYWORD1>DEBUGON</KEYWORD1>
+			<KEYWORD1>DECLARE</KEYWORD1>
+			<KEYWORD1>DEFAULT</KEYWORD1>
+			<KEYWORD1>DEFINITION</KEYWORD1>
+			<KEYWORD1>DELAY</KEYWORD1>
+			<KEYWORD1>DELETE</KEYWORD1>
+			<KEYWORD1>DESC</KEYWORD1>
+			<KEYWORD1>DIGITS</KEYWORD1>
+			<KEYWORD1>DISPOSE</KEYWORD1>
+			<KEYWORD1>DISTINCT</KEYWORD1>
+			<KEYWORD1>DO</KEYWORD1>
+			<KEYWORD1>DROP</KEYWORD1>
+                        <KEYWORD1>DUMP</KEYWORD1>
+			<KEYWORD1>ELSE</KEYWORD1>
+			<KEYWORD1>ELSIF</KEYWORD1>
+			<KEYWORD1>END</KEYWORD1>
+			<KEYWORD1>ENTRY</KEYWORD1>
+			<KEYWORD1>EXCEPTION</KEYWORD1>
+			<KEYWORD1>EXCEPTION_INIT</KEYWORD1>
+			<KEYWORD1>EXCLUSIVE</KEYWORD1>
+			<KEYWORD1>EXIT</KEYWORD1>
+			<KEYWORD1>FALSE</KEYWORD1>
+			<KEYWORD1>FETCH</KEYWORD1>
+			<KEYWORD1>FILE</KEYWORD1>
+			<KEYWORD1>FOR</KEYWORD1>
+			<KEYWORD1>FORM</KEYWORD1>
+			<KEYWORD1>FROM</KEYWORD1>
+			<KEYWORD1>FUNCTION</KEYWORD1>
+			<KEYWORD1>GENERIC</KEYWORD1>
+			<KEYWORD1>GOTO</KEYWORD1>
+			<KEYWORD1>GRANT</KEYWORD1>
+                        <KEYWORD1>GREATEST</KEYWORD1>
+			<KEYWORD1>GROUP</KEYWORD1>
+			<KEYWORD1>HAVING</KEYWORD1>
+			<KEYWORD1>IDENTIFIED</KEYWORD1>
+			<KEYWORD1>IDENTITYCOL</KEYWORD1>
+			<KEYWORD1>IF</KEYWORD1>
+                        <KEYWORD1>IMMEDIATE</KEYWORD1>
+                        <KEYWORD1>INCREMENT</KEYWORD1>
+			<KEYWORD1>INDEX</KEYWORD1>
+			<KEYWORD1>INDEXES</KEYWORD1>
+                        <KEYWORD1>INDICATOR</KEYWORD1>
+                        <KEYWORD1>INITIAL</KEYWORD1>
+			<KEYWORD1>INSERT</KEYWORD1>
+                        <KEYWORD1>INTERFACE</KEYWORD1>
+			<KEYWORD1>INTO</KEYWORD1>
+			<KEYWORD1>IS</KEYWORD1>
+                        <KEYWORD1>LEAST</KEYWORD1>
+			<KEYWORD1>LEVEL</KEYWORD1>
+			<KEYWORD1>LIMITED</KEYWORD1>
+			<KEYWORD1>LOCK</KEYWORD1>
+                        <KEYWORD1>LONG</KEYWORD1>
+                        <KEYWORD1>LOOP</KEYWORD1>
+			<KEYWORD1>MAX</KEYWORD1>
+                        <KEYWORD1>MAXEXTENTS</KEYWORD1>
+			<KEYWORD1>MIN</KEYWORD1>
+                        <KEYWORD1>MINUS</KEYWORD1>
+			<KEYWORD1>MLSLABEL</KEYWORD1>
+                        <KEYWORD1>MOD</KEYWORD1>
+                        <KEYWORD1>MORE</KEYWORD1>
+			<KEYWORD1>NATURAL</KEYWORD1>
+                        <KEYWORD1>NATURALN</KEYWORD1>
+			<KEYWORD1>NEW</KEYWORD1>
+			<KEYWORD1>NEXTVAL</KEYWORD1>
+                        <KEYWORD1>NOAUDIT</KEYWORD1>
+                        <KEYWORD1>NOCOMPRESS</KEYWORD1>
+                        <KEYWORD1>NOWAIT</KEYWORD1>
+                        <KEYWORD1>NULL</KEYWORD1>
+                        <KEYWORD1>NUMBER</KEYWORD1>
+                        <KEYWORD1>NUMBER_BASE</KEYWORD1>
+			<KEYWORD1>OF</KEYWORD1>
+			<KEYWORD1>OFFLINE</KEYWORD1>
+			<KEYWORD1>ON</KEYWORD1>
+			<KEYWORD1>ONLINE</KEYWORD1>
+			<KEYWORD1>OPEN</KEYWORD1>
+			<KEYWORD1>OPTION</KEYWORD1>
+			<KEYWORD1>ORDER</KEYWORD1>
+                        <KEYWORD1>OTHERS</KEYWORD1>
+			<KEYWORD1>OUT</KEYWORD1>
+                        <KEYWORD1>PACKAGE</KEYWORD1>
+                        <KEYWORD1>PARTITION</KEYWORD1>
+                        <KEYWORD1>PCTFREE</KEYWORD1>
+			<KEYWORD1>POSITIVE</KEYWORD1>
+			<KEYWORD1>POSITIVEN</KEYWORD1>
+			<KEYWORD1>PRAGMA</KEYWORD1>
+			<KEYWORD1>PRIVATE</KEYWORD1>
+			<KEYWORD1>PRIVILEGES</KEYWORD1>
+			<KEYWORD1>PROCEDURE</KEYWORD1>
+			<KEYWORD1>PUBLIC</KEYWORD1>
+			<KEYWORD1>QUOTED_IDENTIFIER</KEYWORD1>
+			<KEYWORD1>RAISE</KEYWORD1>
+                        <KEYWORD1>RANGE</KEYWORD1>
+			<KEYWORD1>RAW</KEYWORD1>
+			<KEYWORD1>RECORD</KEYWORD1>
+			<KEYWORD1>REF</KEYWORD1>
+			<KEYWORD1>RELEASE</KEYWORD1>
+                        <KEYWORD1>REMR</KEYWORD1>
+                        <KEYWORD1>RENAME</KEYWORD1>
+                        <KEYWORD1>RESOURCE</KEYWORD1>
+			<KEYWORD1>RETURN</KEYWORD1>
+			<KEYWORD1>REVERSE</KEYWORD1>
+			<KEYWORD1>REVOKE</KEYWORD1>
+			<KEYWORD1>ROLLBACK</KEYWORD1>
+			<KEYWORD1>ROW</KEYWORD1>
+			<KEYWORD1>ROWID</KEYWORD1>
+                        <KEYWORD1>ROWLABEL</KEYWORD1>
+                        <KEYWORD1>ROWNUM</KEYWORD1>
+                        <KEYWORD1>ROWS</KEYWORD1>
+                        <KEYWORD1>ROWTYPE</KEYWORD1>
+                        <KEYWORD1>RUN</KEYWORD1>
+			<KEYWORD1>SAVEPOINT</KEYWORD1>
+			<KEYWORD1>SCHEMA</KEYWORD1>
+			<KEYWORD1>SELECT</KEYWORD1>
+			<KEYWORD1>SEPERATE</KEYWORD1>
+                        <KEYWORD1>SESSION</KEYWORD1>
+			<KEYWORD1>SET</KEYWORD1>
+			<KEYWORD1>SHARE</KEYWORD1>
+			<KEYWORD1>SIGNTYPE</KEYWORD1>
+			<KEYWORD1>SPACE</KEYWORD1>
+                        <KEYWORD1>SQL</KEYWORD1>
+                        <KEYWORD1>SQLCODE</KEYWORD1>
+                        <KEYWORD1>SQLERRM</KEYWORD1>
+                        <KEYWORD1>STATEMENT</KEYWORD1>
+                        <KEYWORD1>STDDEV</KEYWORD1>
+                        <KEYWORD1>SUBTYPE</KEYWORD1>
+                        <KEYWORD1>SUCCESSFULL</KEYWORD1>
+                        <KEYWORD1>SUM</KEYWORD1>
+                        <KEYWORD1>SYNONYM</KEYWORD1>
+                        <KEYWORD1>SYSDATE</KEYWORD1>
+                        <KEYWORD1>TABAUTH</KEYWORD1>
+			<KEYWORD1>TABLE</KEYWORD1>
+                        <KEYWORD1>TABLES</KEYWORD1>
+			<KEYWORD1>TASK</KEYWORD1>
+                        <KEYWORD1>TERMINATE</KEYWORD1>
+			<KEYWORD1>THEN</KEYWORD1>
+			<KEYWORD1>TO</KEYWORD1>
+			<KEYWORD1>TRIGGER</KEYWORD1>
+			<KEYWORD1>TRUE</KEYWORD1>
+			<KEYWORD1>TYPE</KEYWORD1>
+			<KEYWORD1>UID</KEYWORD1>
+			<KEYWORD1>UNION</KEYWORD1>
+			<KEYWORD1>UNIQUE</KEYWORD1>
+			<KEYWORD1>UPDATE</KEYWORD1>
+			<KEYWORD1>UPDATETEXT</KEYWORD1>
+			<KEYWORD1>USE</KEYWORD1>
+                        <KEYWORD1>USER</KEYWORD1>
+                        <KEYWORD1>USING</KEYWORD1>
+                        <KEYWORD1>VALIDATE</KEYWORD1>
+			<KEYWORD1>VALUES</KEYWORD1>
+			<KEYWORD1>VARIANCE</KEYWORD1>
+			<KEYWORD1>VIEW</KEYWORD1>
+                        <KEYWORD1>VIEWS</KEYWORD1>
+			<KEYWORD1>WHEN</KEYWORD1>
+                        <KEYWORD1>WHENEVER</KEYWORD1>
+			<KEYWORD1>WHERE</KEYWORD1>
+			<KEYWORD1>WHILE</KEYWORD1>
+			<KEYWORD1>WITH</KEYWORD1>
+			<KEYWORD1>WORK</KEYWORD1>
+			<KEYWORD1>WRITE</KEYWORD1>
+                        <KEYWORD1>XOR</KEYWORD1>
+
+			<!-- data types -->
+			<KEYWORD1>binary</KEYWORD1>
+			<KEYWORD1>bit</KEYWORD1>
+			<KEYWORD1>blob</KEYWORD1>
+			<KEYWORD1>boolean</KEYWORD1>
+			<KEYWORD1>char</KEYWORD1>
+			<KEYWORD1>character</KEYWORD1>
+			<KEYWORD1>datetime</KEYWORD1>
+			<KEYWORD1>decimal</KEYWORD1>
+			<KEYWORD1>float</KEYWORD1>
+			<KEYWORD1>image</KEYWORD1>
+			<KEYWORD1>int</KEYWORD1>
+			<KEYWORD1>integer</KEYWORD1>
+			<KEYWORD1>money</KEYWORD1>
+			<KEYWORD1>name</KEYWORD1>
+			<KEYWORD1>numeric</KEYWORD1>
+			<KEYWORD1>nchar</KEYWORD1>
+			<KEYWORD1>nvarchar</KEYWORD1>
+			<KEYWORD1>ntext</KEYWORD1>
+			<KEYWORD1>pls_integer</KEYWORD1>
+			<KEYWORD1>real</KEYWORD1>
+			<KEYWORD1>smalldatetime</KEYWORD1>
+			<KEYWORD1>smallint</KEYWORD1>
+			<KEYWORD1>smallmoney</KEYWORD1>
+			<KEYWORD1>text</KEYWORD1>
+			<KEYWORD1>timestamp</KEYWORD1>
+			<KEYWORD1>tinyint</KEYWORD1>
+			<KEYWORD1>uniqueidentifier</KEYWORD1>
+			<KEYWORD1>varbinary</KEYWORD1>
+			<KEYWORD1>varchar</KEYWORD1>
+			<KEYWORD1>varchar2</KEYWORD1>
+
+			<!-- system functions -->
+			<KEYWORD2>ABS</KEYWORD2>
+			<KEYWORD2>ACOS</KEYWORD2>
+                        <KEYWORD2>ADD_MONTHS</KEYWORD2>
+                        <KEYWORD2>ASCII</KEYWORD2>
+			<KEYWORD2>ASIN</KEYWORD2>
+			<KEYWORD2>ATAN</KEYWORD2>
+			<KEYWORD2>ATAN2</KEYWORD2>
+			<KEYWORD2>CEIL</KEYWORD2>
+                        <KEYWORD2>CHARTOROWID</KEYWORD2>
+                        <KEYWORD2>CHR</KEYWORD2>
+                        <KEYWORD2>CONCAT</KEYWORD2>
+                        <KEYWORD2>CONVERT</KEYWORD2>
+			<KEYWORD2>COS</KEYWORD2>
+			<KEYWORD2>COSH</KEYWORD2>
+			<KEYWORD2>FLOOR</KEYWORD2>
+                        <KEYWORD2>HEXTORAW</KEYWORD2>
+                        <KEYWORD2>INITCAP</KEYWORD2>
+                        <KEYWORD2>INSTR</KEYWORD2>
+                        <KEYWORD2>INSTRB</KEYWORD2>
+                        <KEYWORD2>LAST_DAY</KEYWORD2>
+                        <KEYWORD2>LENGTH</KEYWORD2>
+                        <KEYWORD2>LENGTHB</KEYWORD2>
+			<KEYWORD2>LN</KEYWORD2>
+			<KEYWORD2>LOG</KEYWORD2>
+                        <KEYWORD2>LOWER</KEYWORD2>
+                        <KEYWORD2>LPAD</KEYWORD2>
+                        <KEYWORD2>LTRIM</KEYWORD2>
+			<KEYWORD2>MOD</KEYWORD2>
+                        <KEYWORD2>MONTHS_BETWEEN</KEYWORD2>
+                        <KEYWORD2>NEW_TIME</KEYWORD2>
+                        <KEYWORD2>NEXT_DAY</KEYWORD2>
+                        <KEYWORD2>NLSSORT</KEYWORD2>
+                        <KEYWORD2>NSL_INITCAP</KEYWORD2>
+                        <KEYWORD2>NLS_LOWER</KEYWORD2>
+                        <KEYWORD2>NLS_UPPER</KEYWORD2>
+			<KEYWORD2>POWER</KEYWORD2>
+                        <KEYWORD2>RAWTOHEX</KEYWORD2>
+                        <KEYWORD2>REPLACE</KEYWORD2>
+			<KEYWORD2>ROUND</KEYWORD2>
+                        <KEYWORD2>ROWIDTOCHAR</KEYWORD2>
+                        <KEYWORD2>RPAD</KEYWORD2>
+			<KEYWORD2>RTRIM</KEYWORD2>
+			<KEYWORD2>SIGN</KEYWORD2>
+                        <KEYWORD2>SOUNDEX</KEYWORD2>
+			<KEYWORD2>SIN</KEYWORD2>
+			<KEYWORD2>SINH</KEYWORD2>
+			<KEYWORD2>SQRT</KEYWORD2>
+                        <KEYWORD2>SUBSTR</KEYWORD2>
+                        <KEYWORD2>SUBSTRB</KEYWORD2>
+			<KEYWORD2>TAN</KEYWORD2>
+			<KEYWORD2>TANH</KEYWORD2>
+                        <KEYWORD2>TO_CHAR</KEYWORD2>
+                        <KEYWORD2>TO_DATE</KEYWORD2>
+                        <KEYWORD2>TO_MULTIBYTE</KEYWORD2>
+                        <KEYWORD2>TO_NUMBER</KEYWORD2>
+                        <KEYWORD2>TO_SINGLE_BYTE</KEYWORD2>
+                        <KEYWORD2>TRANSLATE</KEYWORD2>
+			<KEYWORD2>TRUNC</KEYWORD2>
+                        <KEYWORD2>UPPER</KEYWORD2>
+
+			<!-- operators -->
+			<KEYWORD1>ALL</KEYWORD1>
+			<KEYWORD1>AND</KEYWORD1>
+			<KEYWORD1>ANY</KEYWORD1>
+			<KEYWORD1>BETWEEN</KEYWORD1>
+			<KEYWORD1>BY</KEYWORD1>
+			<KEYWORD1>CONNECT</KEYWORD1>
+			<KEYWORD1>EXISTS</KEYWORD1>
+			<KEYWORD1>IN</KEYWORD1>
+			<KEYWORD1>INTERSECT</KEYWORD1>
+			<KEYWORD1>LIKE</KEYWORD1>
+			<KEYWORD1>NOT</KEYWORD1>
+			<KEYWORD1>NULL</KEYWORD1>
+			<KEYWORD1>OR</KEYWORD1>
+                        <KEYWORD1>PRIOR</KEYWORD1>
+			<KEYWORD1>START</KEYWORD1>
+			<KEYWORD1>UNION</KEYWORD1>
+			<KEYWORD1>WITH</KEYWORD1>
+
+		</KEYWORDS>
+	</RULES>
+</MODE>
